2_3_kuber-homeworks_appconf/code/task-2/task-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-task-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-2
  template:
    metadata:
      labels:
        app: task-2
    spec: 
      containers:
      - name: nginx
        image: dockerhub.timeweb.cloud/library/nginx:1.26
        ports:
        - containerPort: 80        
        volumeMounts:
          - name: nginx-web-page
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-web-page
        configMap:
          name: nginx-configmap
