2_3_kuber-homeworks_appconf/code/task-2/task-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: task-2
  ports:
    - protocol: TCP
      name: nginx
      port: 443
