2_3_kuber-homeworks_appconf/code/task-2/task-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app-conf.ru
      secretName: nginx-secret
  rules:
    - host: app-conf.ru
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-svc
                port:
                  number: 443
